# lomegl

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: lomegl-config.cmake.in
include/lomegl/: gl_base.h  gl_exception.h  gl_fwd.h  gl_object.h  gl_shader.h  gl_texture.h  gl_utility.h  gl_vertex.h  gl_world.h
include/lomegl/loglfw/: glfw_utility.h
src/: gl_base.cpp  gl_exception.cpp  gl_object.cpp  gl_shader.cpp  gl_texture.cpp  gl_utility.cpp  gl_vertex.cpp  gl_world.cpp
src/loglfw/: glfw_utility.cpp
test/: cmake_path.h  main.cpp
test/shaders/: texture_fragment.glsl  texture_vertex.glsl
vcpkg/: vcpkg-configuration.json  vcpkg.json
